--- a/OutEffHop/model_configs/opt-12L12H.yaml
+++ b/OutEffHop/model_configs/opt-12L12H.yaml
@@ -1,5 +1,8 @@
 max_position_embeddings: 512
 ffn_dim: 3072
+ffn_type: "else"
+ffn_ndlinear_in_dim: [768, 1]
+ffn_ndlinear_ndlinear_dim: [1536, 256]
 hidden_size: 768
 num_hidden_layers: 12
 num_attention_heads: 12
